--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,11 @@
 @import './variables';
 
+html,
+body,
+#___gatsby {
+  height: 100%;
+}
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
@@ -10,4 +16,83 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: $primary;
+}
+
+#gatsby-focus-wrapper {
+  background-color: $accent;
+  height: 100%;
+  display: grid;
+  grid-template-areas:
+    'header header header'
+    'content content side'
+    'footer footer footer';
+  grid-template-columns: 200px 1fr 200px;
+  grid-template-rows: auto 1fr auto;
+}
+
+header {
+  grid-area: header;
+}
+
+main {
+  grid-area: content;
+}
+
+.sidebar {
+  grid-area: side;
+}
+
+footer {
+  grid-area: footer;
+  background-color: yellow;
+  display: flex;
+
+  .left {
+    flex: 1;
+    background-color: green;
+    text-transform: uppercase;
+  }
+
+  .right {
+    flex: 2;
+    background-color: cyan;
+    display: flex;
+    justify-content: flex-end;
+
+    a:not(:last-child) {
+      padding-right: 1rem;
+    }
+  }
+
+  @media (max-width: 768px) {
+    flex-direction: column-reverse;
+
+    .right {
+      display: flex;
+      justify-content: space-evenly;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  #gatsby-focus-wrapper {
+    grid-template-areas:
+      'header'
+      'content'
+      'side'
+      'footer';
+
+    grid-template-columns: 1fr;
+    grid-template-rows:
+      auto /* Header */
+      minmax(75px, auto) /* Nav */
+      1fr /* Content */
+      minmax(75px, auto) /* Sidebar */
+      auto; /* Footer */
+  }
+
+  nav,
+  aside {
+    margin: 0;
+  }
 }
