(cleanup) remove inline styles on Header

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,6 @@
 @import './variables';
+@import './components/Footer';
+@import './components/Header';
 
 html,
 body,
@@ -30,48 +32,12 @@ body {
   grid-template-rows: auto 1fr auto;
 }
 
-header {
-  grid-area: header;
-}
-
 main {
   grid-area: content;
 }
 
 .sidebar {
   grid-area: side;
-}
-
-footer {
-  grid-area: footer;
-  background-color: yellow;
-  display: flex;
-
-  .left {
-    flex: 1;
-    background-color: green;
-    text-transform: uppercase;
-  }
-
-  .right {
-    flex: 2;
-    background-color: cyan;
-    display: flex;
-    justify-content: flex-end;
-
-    a:not(:last-child) {
-      padding-right: 1rem;
-    }
-  }
-
-  @media (max-width: 768px) {
-    flex-direction: column-reverse;
-
-    .right {
-      display: flex;
-      justify-content: space-evenly;
-    }
-  }
 }
 
 @media (max-width: 768px) {
