--- a/src/scss/components/Header.scss
+++ b/src/scss/components/Header.scss
@@ -1,16 +1,9 @@
 header {
   grid-area: header;
-  background: rebeccapurple;
-  margin-bottom: 1.45rem;
+  background: black;
 
-  .content {
-    margin: 0 auto;
-    max-width: 960;
-    padding: 1.45rem 1.0875rem;
-
-    a {
-      color: white;
-      text-decoration: none;
-    }
+  a {
+    color: white;
+    text-decoration: none;
   }
 }
