--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,4 +21,14 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  &.dark {
+    background-color: $primary-text;
+    color: $white;
+    main {
+      a {
+        color: $dark-primary;
+      }
+    }
+  }
 }
