(update) defaulty color palette

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,10 +1,16 @@
 $dark-primary: #d32f2f;
 $light-primary: #ffcdd2;
 $primary: #f44336;
-$accent: #448aff;
+$dark-accent: #1976d2;
+$light-accent: #bbdefb;
+$accent: #2196f3;
+
 $primary-text: #212121;
 $secondary-text: #757575;
 $divider: #bdbdbd;
+
+$background-dark: #212121;
+$background-light: #f5f5f5;
 
 $black: #000000;
 $white: #ffffff;
