--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
 
 @import './variables';
 @import './components/Layout';
@@ -44,5 +45,11 @@ body {
   &.dark {
     background-color: $background-dark;
     color: $white;
+
+    .blog-post {
+      p {
+        color: $background-light;
+      }
+    }
   }
 }
