--- a/src/scss/components/BlogPost.scss
+++ b/src/scss/components/BlogPost.scss
@@ -1,12 +1,17 @@
 .blog-post {
-  h1.post-title {
+  .gatsby-image-wrapper {
+    max-height: 430px;
+  }
+
+  h1.post-title,
+   {
     font-family: 'Roboto Slab', serif;
     font-size: 40px;
     font-weight: 500;
     margin: 0 0 0.75rem;
   }
 
-  h2.post-subtitle {
+  h2.post-subtitle, figure figcaption {
     font-family: 'Roboto Slab', serif;
     color: $secondary-text;
     font-size: 1rem;
@@ -33,10 +38,51 @@
     line-height: 1.75;
   }
 
+  .post-body {
+    img {
+      object-fit: cover;
+    }
+
+    img.vertical {
+      object-fit: contain;
+    }
+
+    figure {
+      margin: 2ch 0;
+
+      img {
+        width: 100%;
+        height: 430px;
+        object-position: center center;
+        margin: 0;
+        padding: 0;
+      }
+
+      figcaption {
+        padding-bottom: 3px;
+        border-bottom: 0.75px solid $divider;
+      }
+    }
+  }
+
   a.previous-post,
   a.next-post {
     font-family: 'Roboto Slab', serif;
     display: block;
     line-height: 1.75;
+  }
+
+  @media (max-width: 425px) {
+    .gatsby-image-wrapper {
+      height: 250px;
+    }
+
+    .post-body {
+      figure {
+        img {
+          height: 250px;
+        }
+      }
+    }
   }
 }
