(feat) implement tweet embed plugin

--- a/src/scss/components/BlogPost.scss
+++ b/src/scss/components/BlogPost.scss
@@ -63,6 +63,10 @@
         border-bottom: 0.75px solid $divider;
       }
     }
+
+    .twitter-tweet-rendered {
+      margin: 0 auto;
+    }
   }
 
   a.previous-post,
