(feat) center post preview on homepage

--- a/src/scss/components/PostPreview.scss
+++ b/src/scss/components/PostPreview.scss
@@ -1,7 +1,8 @@
 .post-preview {
-  max-width: 66ch;
+  max-width: 58ch;
   border-bottom: 1px solid $divider;
   padding: 0 0 1rem;
+  margin: 0 auto;
 
   h2.title {
     // color: $accent;
