(feat) Update styling of PostPreview component

--- a/src/scss/components/PostPreview.scss
+++ b/src/scss/components/PostPreview.scss
@@ -1,14 +1,15 @@
 .post-preview {
   max-width: 58ch;
-  border-bottom: 1px solid $divider;
   padding: 0 0 1rem;
-  margin: 0 auto;
+  margin: 2rem auto 0;
 
   h2.title {
-    // color: $accent;
-    margin: 1.5ch 0 0.5ch;
+    margin: 0.7ch 0;
+    font-weight: 500;
+    font-size: 22px;
 
     a {
+      color: $primary-text;
       text-decoration: none;
 
       &:hover {
@@ -18,12 +19,16 @@
   }
 
   .subtitle {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 0.89rem;
     margin: 0;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1.5px;
+    color: $secondary-text;
   }
 
-  p {
+  p.description {
     margin: 1ch 0;
+    line-height: 25px;
   }
 }
