--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Staatliches&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap');
 
 @import './variables';
@@ -24,7 +25,7 @@ html {
     margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto', sans-serif;
 
     a {
       &:link {
@@ -44,6 +45,12 @@ html {
     &.dark {
       background-color: $background-dark;
       color: $white;
+
+      .post-preview {
+        h2.title > a {
+          color: $white;
+        }
+      }
 
       .blog-post {
         ul > li,
